--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Valentine :)</title>
+    <title>Fatima for You :)</title>
     <link
       rel="stylesheet"
     />
@@ -17,7 +17,7 @@
       <div class="one">
         <h1 class="one">
           Hey
-          <span id="name">xyz</span>
+          <span id="name">Fatima</span>
         </h1>
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Hey hi hello !! Yeee! Love and blah blah...
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">A Gift for You, Fatima</h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
